# pedimap2

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SETUP_GITHUB.md  build_sidecar.ps1  build_sidecar.sh
.github/workflows/: ci.yml  docs.yml  release.yml
backend/: api.py  pedigree_engine.py  pedimap_backend.spec  requirements.txt  sample_data.py
backend/tests/: test_smoke.py
docs/: 01_introduction.md  02_installation.md  03_quickstart.md  04_file_formats.md  05_interface.md  06_visualization.md  07_data_export.md  08_advanced.md  09_faq.md  CHANGELOG.md  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: IndividualPanel.tsx  PedigreeCanvas.tsx
frontend/src/hooks/: useApi.ts
src-tauri/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
