[package]
name        = "pedimap2"
version     = "2.0.0"
description = "Pedimap 2.0 – multiplatform pedigree visualisation for plant breeding"
authors     = ["Fresnedo-Lab <https://github.com/Fresnedo-Lab>"]
license     = "MIT"
repository  = "https://github.com/Fresnedo-Lab/pedimap2"
edition     = "2021"

# ── Build ─────────────────────────────────────────────────────────────────────
[build-dependencies]
tauri-build = { version = "1", features = [] }

# ── Runtime ───────────────────────────────────────────────────────────────────
# IMPORTANT: Cargo.toml features MUST mirror the allowlist in tauri.conf.json.
# tauri-build enforces this at compile time and exits 1 if they diverge.
#
# tauri.conf.json allowlist mapping → Cargo feature:
#   shell.open    + shell.sidecar  → shell-open, shell-sidecar
#   dialog.open   + dialog.save   → dialog-open, dialog-save
#   fs.readFile   + fs.writeFile  → fs-read-file, fs-write-file
#   window.all: true              → window-all   (NOT individual window-* flags)
[dependencies]
tauri = { version = "1", features = [
    "shell-open",
    "shell-sidecar",
    "dialog-open",
    "dialog-save",
    "fs-read-file",
    "fs-write-file",
    "window-all",        # matches "window": { "all": true } in tauri.conf.json
    "system-tray",
] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
