[package]
name        = "pedimap2"
version     = "2.1.0"
description = "Pedimap 2.0 – multiplatform pedigree visualisation for plant breeding"
authors     = ["Fresnedo-Lab <https://github.com/Fresnedo-Lab>"]
license     = "MIT"
repository  = "https://github.com/Fresnedo-Lab/pedimap2"
edition     = "2021"

# ── Build ─────────────────────────────────────────────────────────────────────
[build-dependencies]
tauri-build = { version = "2", features = [] }

# ── Runtime ───────────────────────────────────────────────────────────────────
# Tauri 2.x: permissions are declared in src-tauri/capabilities/ — no feature
# flags required here for shell/dialog/fs; plugins are registered in main.rs.
[dependencies]
tauri = { version = "2", features = ["tray-icon",
] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
